--- a/Calculator-Iphone/index.html
+++ b/Calculator-Iphone/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="width">
     <link rel="stylesheet" href="style.css">
     <title>Calculator iphone</title>
     
